--- a/package.json
+++ b/package.json
@@ -1,26 +1,55 @@
 {
-  "name": "svsfiadmission",
-  "version": "0.1.0",
+  "name": "svsfi-enrollment-system",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16"
+    "@hookform/resolvers": "^3.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.0.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "next": "13.4.12",
+    "next-auth": "^4.22.3",
+    "nodemailer": "^6.9.4",
+    "pdfkit": "^0.13.0",
+    "qrcode": "^1.5.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "recharts": "^2.7.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "20.4.5",
+    "@types/nodemailer": "^6.4.9",
+    "@types/pdfkit": "^0.12.10",
+    "@types/qrcode": "^1.5.1",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.12",
+    "postcss": "8.4.27",
+    "prisma": "^5.0.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6",
+    "handlebars-loader": "^1.7.3"
   }
 }
+
