--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -45,11 +46,10 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "handlebars-loader": "^1.7.3",
     "postcss": "8.4.27",
     "prisma": "^5.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "handlebars-loader": "^1.7.3"
+    "typescript": "5.1.6"
   }
 }
-
