--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "lucide-react": "^0.469.0",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "nodemailer": "^6.9.4",
@@ -33,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "recharts": "^2.7.2",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
