--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.469.0",
-    "next": "13.4.12",
+    "next": "^15.1.3",
     "next-auth": "^4.22.3",
     "nodemailer": "^6.9.4",
     "pdfkit": "^0.13.0",
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.45.2",
     "recharts": "^2.7.2",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -49,7 +50,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "handlebars-loader": "^1.7.3",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.49",
     "prisma": "^5.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
